[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/UI/architecture-bright-cars-444964.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/Logo.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Art/UI/card_background.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/bensound-dance.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/395824__loremonger__spilled-coins.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]

size = 75
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFontData" id=2]

font_path = "res://Assets/Fonts/POKERFACE.ttf"

[sub_resource type="DynamicFont" id=3]

size = 90
use_mipmaps = false
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="UI" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="LogoBackground" type="Polygon2D" parent="." index="0"]

modulate = Color( 1, 1, 1, 0.884 )
z_index = 1
polygon = PoolVector2Array( -15.3863, -90.6893, -9.38556, 262.077, 750.549, 262.077, 754.568, -87.349 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Texture", "Transform", "Visibility", "Z Index" ]

[node name="architecture-bright-cars-444964" type="Sprite" parent="LogoBackground" index="0"]

position = Vector2( 371.276, 110.939 )
scale = Vector2( 0.184199, 0.184199 )
z_index = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Logo" type="Sprite" parent="LogoBackground" index="1"]

position = Vector2( 372.612, 78.9574 )
scale = Vector2( 1.48985, 1.48985 )
z_index = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="ScoreBG" type="Polygon2D" parent="." index="1"]

position = Vector2( 82.8227, -104.766 )
scale = Vector2( 1.23436, 1.20992 )
z_index = 2
polygon = PoolVector2Array( -48.2477, 201.563, -47.8942, 274.765, 100.601, 275.032, 100.601, 200.647 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Texture", "Visibility", "Z Index" ]

[node name="ScoreLabel" type="Label" parent="ScoreBG" index="0"]

modulate = Color( 1, 0.800262, 0.269531, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -41.0
margin_top = 196.0
margin_right = 122.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "30"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "Visibility", "custom_constants", "custom_fonts" ]

[node name="BoardBG" type="Sprite" parent="." index="2"]

modulate = Color( 1, 1, 1, 0.78451 )
position = Vector2( 327.593, 1018.42 )
scale = Vector2( 0.868078, 1.00566 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Visibility" ]

[node name="BlackBG" type="Polygon2D" parent="." index="3"]

position = Vector2( -19.8014, 12.1466 )
scale = Vector2( 1.23436, 1.20992 )
z_index = 1
polygon = PoolVector2Array( -58.8748, -38.9497, -53.4568, 380.43, 646.903, 380.85, 651.294, -33.8761 )
uv = PoolVector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Invert", "Texture", "Visibility", "Z Index" ]

[node name="WinningHandControl" type="Control" parent="BlackBG" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 281.0
margin_right = -93.1693
margin_bottom = 321.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="WinningHandLabel" type="Label" parent="BlackBG/WinningHandControl" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = -45.0
margin_right = 598.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Material", "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="CoinsJingling" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"


